Fetch data dynamically from database

--- a/phinx.yml
+++ b/phinx.yml
@@ -15,4 +15,13 @@ environments:
         port: 3306
         charset: utf8
 
+    production:
+        adapter: mysql
+        host: 127.0.0.1
+        name: ''
+        user: ''
+        pass: ''
+        port: 3306
+        charset: utf8
+
 version_order: creation
